--- a/modul1/index.html
+++ b/modul1/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-</head>
+</head> 
+    <body>
+      <header class="menu">
 <nav>
     <a href="#"></a>
     <ul>
@@ -15,11 +17,11 @@
             <li><a href="#">travel</a></li>
             </ul>
     </nav>
-<body>
+</header>
         <main>
     <section>
             <article>  
-                 <img src="img/homework-01.jpg"> 
+                 <img src="img/homework-01.jpg" alt= "life"> 
                 <p>lifestyle</p>
                  <h2>More than just a music festival</h2> 
  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -32,7 +34,7 @@ occaecat cupidatat non proident, sunt in culpa qui officia
 deserunt mollit anim id est laborum.</p> 
 </article> 
           <article> 
-                <img src="img/homework-02.jpg"> 
+                <img src="img/homework-02.jpg" alt= "coffe"> 
                 <p>lifestyle</p> 
                 <h2>Life tastes better with coffee</h2>                                      
      <p>Phasellus iaculis aliquet erat, non laoreet nisl. Vestibulum ornare 
@@ -46,7 +48,7 @@ deserunt mollit anim id est laborum.</p>
          Phasellus posuere ullamcorper ipsum, eu mollis erat laoreet eu.</p> 
         </article>
                    <article>
-                             <img src="img/homework-03.jpg"> 
+                             <img src="img/homework-03.jpg" alt= "bridge"> 
                              <p>photodiary</p>
                              <h2>American dream</h2> 
      <p>Duis tincidunt leo vel felis tincidunt, in porta lacus laoreet. 
@@ -64,7 +66,7 @@ deserunt mollit anim id est laborum.</p>
          Maecenas sodales risus sed mauris maximus vehicula.</p> 
         </article>
                    <article> 
-                              <img src="img/homework-04.jpg"> 
+                              <img src="img/homework-04.jpg" alt= "travel"> 
                               <p>photodiary</p>
                               <h2>A day exploring the Alps</h2>
      <p>Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
@@ -79,5 +81,5 @@ deserunt mollit anim id est laborum.</p>
                               <button>load more</button>
             </section>
         </main>
-</body>
+      </body>
 </html>
