--- a/modul3/index.html
+++ b/modul3/index.html
@@ -22,7 +22,7 @@
         </ul>
       </nav>
      </header>
-     <main> 
+     <main class="conteiner">  
             <section class="features">
           <article class="part">  
             <img src="img/image1.jpg" alt= "life" width="420" height="280"> 
@@ -82,7 +82,6 @@
             Nunc ac lacus et orci viverra cursus id id dui. 
             Ut efficitur justo eu felis efficitur, in efficitur sem sagittis.</p>
          </article>
-            <button class="load more button">load more</button>
         </section>
         <div class="button_div">
           <button class="loadmore"> Load more</button>
