--- a/modul4/index.html
+++ b/modul4/index.html
@@ -32,86 +32,91 @@
       <h2 class="features-title">Featured Products</h2>
         <ul class="features-list clearfix">
           <li class="features-list-product">
-            <a> href="" class = "clearfix"</a>
-            <img class="features-list-product img" src="img/img1.png" alt="one" with="255" height="282">
-             <p>class = "features-list-product name"blue tshirt</p>
-             <p>class = "features-list-product price"$26 </p>
+            <a href="#" class="features-list-price">
+            <img class= "features-list-product img" src="img/img1.png" alt="one" with="255" height="282">
+            <p class= "features-list-product name">blue tshirt $26</p>
+          </a>
             </li> 
            <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+             <a href="#" class="features-list-price">
                <img class="features-list-product img" src="img/img2.png" alt="two" with="255" height="282">
-                <p> class = "features-list-product name"woman shirt</p>
-                <p> class = "features-list-product price"$31</p>
+                <p class = "features-list-product name">woman shirt</p>
+                <p class = "features-list-product price">$31</p>
+            </a>
             </li> 
             <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+              <a href="#" class="features-list-price">
                 <img class="features-list-product img" src="img/img3.png" alt="tree" with="255" height="282">
-                <p> class = "features-list-product name" yellow tshirt</p>
-                <p> class = "features-list-product price"$21</p>
+                <p class = "features-list-product name">yellow tshirt</p>
+                <p class = "features-list-product price">$21</p>
+            </a>
             </li> 
             <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+              <a href="#" class="features-list-price">
                 <img class="features-list-product img" src="img/img4.png" alt="four" with="255" height="282">
-                <p> class = "features-list-product name"cool lingerie</p>
-                <p> class = "features-list-product price"$56</p>
+                <p class = "features-list-product name">cool lingerie</p>
+                <p class = "features-list-product price">$56</p>
+            </a>
             </li> 
             <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+              <a href="#" class="features-list-price">
                 <img class="features-list-product img" src="img/img5.png" alt="five" with="255" height="282">
-                 <p> class = "features-list-product name"blue tshirt</p>
-                 <p> class = "features-list-product price"$26</p>
+                 <p class = "features-list-product name" >blue tshirt</p>
+                 <p class = "features-list-product price">$26</p>
+                </a>
             </li> 
             <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+                <a href="#" class="features-list-price">
                  <img class="features-list-product img" src="img/img6.png" alt="eight" with="255" height="282">
-                  <p> class = "features-list-product name"cool lingerie</p>
-                  <p> class = "features-list-product price" $56</p>
+                  <p class = "features-list-product name">cool lingerie</p>
+                  <p class = "features-list-product price">$56</p>
+                </a>
                 </li> 
               <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+                <a href="#" class="features-list-price">
                  <img class="features-list-product img" src="img/img7.png" alt="seven" with="255" height="282">
-                  <p> class = "features-list-product name"yellow tshirt</p>
-                 <p> class = "features-list-product price"$21</p>
+                 <p class = "features-list-product name">yellow tshirt</p>
+                 <p class = "features-list-product price">$21</p>
+                </a>
             </li> 
             <li class="features-list-product">
-                <a> href="" class = "clearfix"</a>
+              <a href="#" class="features-list-price">
                 <img class="features-list-product img" src="img/img8.png" alt="eight" with="255" height="282">
-                <p> class = "features-list-product name"cool lingerie</p>
-                <p> class = "features-list-product price"$56</p>
-            </li> 
+                <p class="features-list-product name">cool lingerie</p>
+                <p class="features-list-product price">$56</p>
+             </a>
+            </li>
         </ul>
     </section>
  <!-- FEATURES SECTION 2 -->
     <section class="news">
             <h2 class="features-title">lates news</h2>
              <ul class="features-news clearfix">
-              <li class="features-list-picture">
+              <li class="features-news-picture">
                 <img class="image" src="img/img9.png" alt="one" with="347" height="262">
-                 <p class="paragraf one">Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
+                 <p class="paragraf-one">Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
                         Nunc ac lacus et orci viverra cursus id id dui.</p>
-                 <p class="paragraf two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
+                 <p class="paragraf-two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
                         Nunc ac lacus et orci viverra cursus id id dui.
-                        Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
-                        Nunc ac lacus et orci viverra cursus id id dui. </p>
+                        Nunc eget risus ut arcu elementum efficitur. </p>
                  <button class="readmore">Read More</button>
                 </li> 
-             <li class="features-list-picture">
+             <li class="features-news-picture">
                 <img class="image" src="img/img10.png" alt="two" with="347px" height="262">
-                <p class="paragraf one">Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
+                <p class="paragraf-one">Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
                                 Nunc ac lacus et orci viverra cursus id id dui.</p>
-                <p class="paragraf two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
-                                Nunc ac lacus et orci viverra cursus id id dui. Nunc eget risus ut arcu elementum efficitur. 
-                                Quisque ac laoreet libero.
-                                Nunc ac lacus et orci viverra cursus id id dui. </p>
-                <button class="readdmore">Read More</button>
+                <p class="paragraf-two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
+                                Nunc ac lacus et orci viverra cursus id id dui. Nunc eget risus ut arcu elementum efficitur.</p>
+                <button class="readmore">Read More</button>
                </li> 
-             <li class="features-list-picture">
+             <li class="features-news-picture">
                 <img class="image" src="img/img11.png" alt="three" with="347" height="262">
-                <p class="paragraf one"> Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
+                <p class="paragraf-one"> Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
                                 Nunc ac lacus et orci viverra cursus id id dui.</p>
-                <p class="paragraf two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero.
-                                Nunc ac lacus et orci viverra cursus id id dui.
-                                Nunc ac lacus et orci viverra cursus id id dui. </p>
+                <p class="paragraf-two">Nunc eget risus ut arcu elementum efficitur.
+                                Nunc ac lacus et orci viverra cursus id id dui. 
+                               Nunc eget risus ut arcu elementum efficitur.
+                </p>
                 <button class="readmore">Read More</button>
             </li> 
         </ul>
