--- a/modul4/index.html
+++ b/modul4/index.html
@@ -34,7 +34,8 @@
           <li class="features-list-product">
             <a href="#" class="features-list-price">
             <img class= "features-list-product img" src="img/img1.png" alt="one" with="255" height="282">
-            <p class= "features-list-product name">blue tshirt $26</p>
+            <p class= "features-list-product name">blue tshirt</p>
+            <p class = "features-list-product price">$26</p>
           </a>
             </li> 
            <li class="features-list-product">
