--- a/modul4/index.html
+++ b/modul4/index.html
@@ -32,59 +32,59 @@
       <h2 class="features-title">Featured Products</h2>
         <ul class="features-list clearfix">
           <li class="features-list-product">
-            <a href="#" class="features-list-price">
-            <img class= "features-list-product img" src="img/img1.png" alt="one" with="255" height="282">
-            <p class= "features-list-product name">blue tshirt</p>
-            <p class = "features-list-product price">$26</p>
+            <a href="#" class="features">
+            <img class= "features-list img" src="img/img1.png" alt="one" with="255" height="282">
+            <p class= "features-list name">blue tshirt</p>
+            <p class = "features-list price">$26</p>
           </a>
             </li> 
            <li class="features-list-product">
-             <a href="#" class="features-list-price">
-               <img class="features-list-product img" src="img/img2.png" alt="two" with="255" height="282">
-                <p class = "features-list-product name">woman shirt</p>
-                <p class = "features-list-product price">$31</p>
+             <a href="#" class="features">
+               <img class="features-list img" src="img/img2.png" alt="two" with="255" height="282">
+                <p class = "features-list name">woman shirt</p>
+                <p class = "features-list price">$31</p>
             </a>
             </li> 
             <li class="features-list-product">
-              <a href="#" class="features-list-price">
-                <img class="features-list-product img" src="img/img3.png" alt="tree" with="255" height="282">
-                <p class = "features-list-product name">yellow tshirt</p>
-                <p class = "features-list-product price">$21</p>
+              <a href="#" class="features">
+                <img class="features-list img" src="img/img3.png" alt="tree" with="255" height="282">
+                <p class = "features-list name">yellow tshirt</p>
+                <p class = "features-list price">$21</p>
             </a>
             </li> 
             <li class="features-list-product">
-              <a href="#" class="features-list-price">
-                <img class="features-list-product img" src="img/img4.png" alt="four" with="255" height="282">
-                <p class = "features-list-product name">cool lingerie</p>
-                <p class = "features-list-product price">$56</p>
+              <a href="#" class="features">
+                <img class="features-list img" src="img/img4.png" alt="four" with="255" height="282">
+                <p class = "features-list name">cool lingerie</p>
+                <p class = "features-list price">$56</p>
             </a>
             </li> 
             <li class="features-list-product">
-              <a href="#" class="features-list-price">
-                <img class="features-list-product img" src="img/img5.png" alt="five" with="255" height="282">
-                 <p class = "features-list-product name" >blue tshirt</p>
-                 <p class = "features-list-product price">$26</p>
+              <a href="#" class="features">
+                <img class="features-list img" src="img/img5.png" alt="five" with="255" height="282">
+                 <p class = "features-list name" >blue tshirt</p>
+                 <p class = "features-list price">$26</p>
                 </a>
             </li> 
             <li class="features-list-product">
                 <a href="#" class="features-list-price">
-                 <img class="features-list-product img" src="img/img6.png" alt="eight" with="255" height="282">
-                  <p class = "features-list-product name">cool lingerie</p>
-                  <p class = "features-list-product price">$56</p>
+                 <img class="features-list img" src="img/img6.png" alt="eight" with="255" height="282">
+                  <p class = "features-list name">cool lingerie</p>
+                  <p class = "features-list price">$56</p>
                 </a>
                 </li> 
               <li class="features-list-product">
-                <a href="#" class="features-list-price">
-                 <img class="features-list-product img" src="img/img7.png" alt="seven" with="255" height="282">
-                 <p class = "features-list-product name">yellow tshirt</p>
-                 <p class = "features-list-product price">$21</p>
+                <a href="#" class="features">
+                 <img class="features-list img" src="img/img7.png" alt="seven" with="255" height="282">
+                 <p class = "features-list name">yellow tshirt</p>
+                 <p class = "features-list price">$21</p>
                 </a>
             </li> 
             <li class="features-list-product">
-              <a href="#" class="features-list-price">
-                <img class="features-list-product img" src="img/img8.png" alt="eight" with="255" height="282">
-                <p class="features-list-product name">cool lingerie</p>
-                <p class="features-list-product price">$56</p>
+              <a href="#" class="features">
+                <img class="features-list img" src="img/img8.png" alt="eight" with="255" height="282">
+                <p class="features-list name">cool lingerie</p>
+                <p class="features-list price">$56</p>
              </a>
             </li>
         </ul>
