--- a/modul4/index.html
+++ b/modul4/index.html
@@ -40,49 +40,49 @@
             </li> 
            <li class="features-list-product">
              <a href="#" class="features">
-               <img class="features-list img" src="img/img2.png" alt="two" with="255" height="282">
+               <img class="features-list img" src="img/img2.png" alt="two" with="255" height="322">
                 <p class = "features-list name">woman shirt</p>
                 <p class = "features-list price">$31</p>
             </a>
             </li> 
             <li class="features-list-product">
               <a href="#" class="features">
-                <img class="features-list img" src="img/img3.png" alt="tree" with="255" height="282">
+                <img class="features-list img" src="img/img3.png" alt="tree" with="255" height="322">
                 <p class = "features-list name">yellow tshirt</p>
                 <p class = "features-list price">$21</p>
             </a>
             </li> 
             <li class="features-list-product">
               <a href="#" class="features">
-                <img class="features-list img" src="img/img4.png" alt="four" with="255" height="282">
+                <img class="features-list img" src="img/img4.png" alt="four" with="255" height="322">
                 <p class = "features-list name">cool lingerie</p>
                 <p class = "features-list price">$56</p>
             </a>
             </li> 
             <li class="features-list-product">
               <a href="#" class="features">
-                <img class="features-list img" src="img/img5.png" alt="five" with="255" height="282">
+                <img class="features-list img" src="img/img5.png" alt="five" with="255" height="322">
                  <p class = "features-list name" >blue tshirt</p>
                  <p class = "features-list price">$26</p>
                 </a>
             </li> 
             <li class="features-list-product">
-                <a href="#" class="features-list-price">
-                 <img class="features-list img" src="img/img6.png" alt="eight" with="255" height="282">
+                <a href="#" class="features">
+                 <img class="features-list img" src="img/img6.png" alt="eight" with="255" height="322">
                   <p class = "features-list name">cool lingerie</p>
                   <p class = "features-list price">$56</p>
                 </a>
                 </li> 
               <li class="features-list-product">
                 <a href="#" class="features">
-                 <img class="features-list img" src="img/img7.png" alt="seven" with="255" height="282">
+                 <img class="features-list img" src="img/img7.png" alt="seven" with="255" height="322">
                  <p class = "features-list name">yellow tshirt</p>
                  <p class = "features-list price">$21</p>
                 </a>
             </li> 
             <li class="features-list-product">
               <a href="#" class="features">
-                <img class="features-list img" src="img/img8.png" alt="eight" with="255" height="282">
+                <img class="features-list img" src="img/img8.png" alt="eight" with="255" height="322">
                 <p class="features-list name">cool lingerie</p>
                 <p class="features-list price">$56</p>
              </a>
@@ -95,8 +95,7 @@
              <ul class="features-news clearfix">
               <li class="features-news-picture">
                 <img class="image" src="img/img9.png" alt="one" with="347" height="262">
-                 <p class="paragraf-one">Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
-                        Nunc ac lacus et orci viverra cursus id id dui.</p>
+                 <p class="paragraf-one">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                  <p class="paragraf-two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
                         Nunc ac lacus et orci viverra cursus id id dui.
                         Nunc eget risus ut arcu elementum efficitur. </p>
@@ -104,16 +103,14 @@
                 </li> 
              <li class="features-news-picture">
                 <img class="image" src="img/img10.png" alt="two" with="347px" height="262">
-                <p class="paragraf-one">Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
-                                Nunc ac lacus et orci viverra cursus id id dui.</p>
+                <p class="paragraf-one">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                 <p class="paragraf-two">Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
                                 Nunc ac lacus et orci viverra cursus id id dui. Nunc eget risus ut arcu elementum efficitur.</p>
                 <button class="readmore">Read More</button>
                </li> 
              <li class="features-news-picture">
                 <img class="image" src="img/img11.png" alt="three" with="347" height="262">
-                <p class="paragraf-one"> Lorem ipsum.Nunc eget risus ut arcu elementum efficitur. Quisque ac laoreet libero. 
-                                Nunc ac lacus et orci viverra cursus id id dui.</p>
+                <p class="paragraf-one">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                 <p class="paragraf-two">Nunc eget risus ut arcu elementum efficitur.
                                 Nunc ac lacus et orci viverra cursus id id dui. 
                                Nunc eget risus ut arcu elementum efficitur.
