--- a/modul5/index.html
+++ b/modul5/index.html
@@ -38,7 +38,7 @@
       </div>
     </section>
    <!-- SECTION 2 -->
-    <section class="new-collection">
+    <section class="new new-collection">
       <h2 class="new-collection-title">new collection</h2>
        <ul class="new-collection-list clearfix">
         <li class="new-collection-picture">
@@ -49,7 +49,7 @@
          </a>
          <div class="new-collection-button">
            <button class="button-heart"></button>
-           <button class="button-duble-line"></button>
+           <button class="button-double-line"></button>
            <button class="button-clock"></button>
            <button class="button-cart">add to cart</button>
          </div>
@@ -62,7 +62,7 @@
           </a>
           <div class="new-collection-button">
             <button class="button-heart"></button>
-            <button class="button-duble-line"></button>
+            <button class="button-double-line"></button>
             <button class="button-clock"></button>
             <button class="button-cart">add to cart</button>
           </div>
@@ -75,7 +75,7 @@
           </a>
           <div class="new-collection-button">
             <button class="button-heart"></button>
-            <button class="button-duble-line"></button>
+            <button class="button-double-line"></button>
             <button class="button-clock"></button>
             <button class="button-cart">add to cart</button>
           </div>
@@ -88,12 +88,12 @@
           </a>
           <div class="new-collection-button">
             <button class="button-heart"></button>
-            <button class="button-duble-line"></button>
+            <button class="button-double-line"></button>
             <button class="button-clock"></button>
             <button class="button-cart">add to cart</button>
           </div>
         </li> 
-    </ul>
+      </ul>
    </section>
   </main>
   <footer class="footer">
