--- a/modul5/index.html
+++ b/modul5/index.html
@@ -30,10 +30,12 @@
   <!-- my slider -->
     <section class=" main slider">
       <div class="slider">
+       <div class="slider--inner">
         <button class="slider-ctrl slider-ctrl-prev"></button>
         <button class="slider-ctrl slider-ctrl-next"></button>
         <p class= "slider-title">affordable paris tours</p>
         <p class = "slider-text">city tours/tour tickets/tour gides</p>
+       </div>
       </div>
     </section>
    <!-- SECTION 2 -->
