--- a/modul5/index.html
+++ b/modul5/index.html
@@ -28,7 +28,7 @@
   <!-- my main -->
   <main class="basic">
   <!-- my slider -->
-    <section class=" main slider">
+    <section>
       <div class="slider">
        <div class="slider--inner">
         <button class="slider-ctrl slider-ctrl-prev"></button>
