--- a/modul6/index.html
+++ b/modul6/index.html
@@ -70,7 +70,7 @@
     </section>
      <!-- service-list-end -->
     <!-- team-list-start -->
-    <section class="team">
+    <section>
       <p class="team-title1">Who we are</p>
       <h2 class="team-title2">Meet our team</h2>
       <p class="team-text">
