--- a/modul6/index.html
+++ b/modul6/index.html
@@ -124,7 +124,7 @@
       <!-- team-list-end-->
     </main>
      <!-- footer-start -->
-    <footer>
+    <footer class="container">
       <div class="footer-container">
         <p class="footer-info">  © 2016 MoGo free PSD template by <a href="#">Laaqiq</a> </p>
         <div class="input_forma">
