--- a/modul7/index.html
+++ b/modul7/index.html
@@ -13,7 +13,7 @@
    <header class="page-header">
     <nav class="page-nav container">
       <a href="#" class="site-logo">
-        <img src="img/logo.png" alt="site logo" width="78 px" height="28 px">
+        <img src="img/Logo.png" alt="site logo" width="78 px" height="28 px">
       </a>
     <!--navigation-->
       <ul class="site-navigation">
