--- a/modul9/index.html
+++ b/modul9/index.html
@@ -29,23 +29,21 @@
             </nav>
          </div>
        </div>
-       <div class="row justify-content-center">
-         <div class="col-md-8">
-           <div class="col-md-8">
+         <div class=" col-12  col-md-8 col-lg-12">
+           <div class="row justify-content-center">
              <p class="title">Share your holiday dreams</p>
             </div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class=" col-12 col-md-8 col-lg-12">
+              <div class="row justify-content-center">
              <p class="text">And find the perfect partner to fullfill it</p>
             </div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-12 col-md-8 col-lg-12">
+              <div class="row justify-content-center">
              <a class="header-button" href="#">Find your holiday partner</a>
             </div>
         </div>
-       </div>
       </div>
      </header>
      <main>
@@ -60,7 +58,7 @@
             <div class="row">
              <div class="col-md-6 order-md-1 team-list col-lg-3">
               <div class="row">
-                <div class="col-sm-12">
+                 <div class="col-sm-12">
                   <div class="icon1 list-name">
                     <img class="contact-picture" src="img/img1.png" alt="one">
                     <h3 class="contact-title">Bradley Hunter</h3>
