--- a/modul9/index.html
+++ b/modul9/index.html
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-md-6">
              <a class="header-button" href="#">Find your holiday partner</a>
             </div>
         </div>
@@ -49,35 +49,35 @@
      <main>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h2 class="partners-title">Meet a partner for your best holiday</h2>
           </div>
         </div>
             <div class="row">
-                <div class="col-12 col-md-4 team-list col-xl-3">
+                <div class="col-12 col-md-5 col-xl-3">
                   <div class="icon1 list-name">
                     <img class="contact-picture" src="img/img1.png" alt="one">
                     <h3 class="contact-title">Bradley Hunter</h3>
                     <p class="contact-information">Based in Chicago. I love playing tennis and loud music.</p>
                   </div>
                 </div>
-                <div class="col-12 col-md-4 team-list col-xl-3">
+                <div class="col-12 col-md-5 col-xl-3">
                <div class="icon2 list-name">
-                <img class="contact-picture" src="img/img2.png" alt="two">
-                <h3 class="contact-title">Lucas Marsha</h3>
-                <p class="contact-information">I get my inspiration from nature and objects around me. 
+                  <img class="contact-picture" src="img/img2.png" alt="two">
+                  <h3 class="contact-title">Lucas Marsha</h3>
+                  <p class="contact-information">I get my inspiration from nature and objects around me. 
                            I have a passion to colours, typography and skateboards.</p>
                </div>
               </div>
               <div class="w-100 d-none d-md-block d-xl-none"></div>
-            <div class="col-12 col-md-4 team-list col-xl-3">
+            <div class="col-12 col-md-5 col-xl-3">
                   <div class="icon3 list-name">
                     <img class="contact-picture" src="img/img3.png" alt="three">
                     <h3 class="contact-title">Heather Walker</h3>
                     <p class="contact-information">I'm a happy person that loves cats and climbing on mountains.</p>
                 </div>
                </div>
-            <div class="col-12 col-md-4 team-list col-xl-3">
+            <div class="col-12 col-md-5 col-xl-3">
                  <div class="icon4 list-name">
                     <img class="contact-picture" src="img/img4.png" alt="four">
                     <h3 class="contact-title">Bradley Hunterr</h3>
