--- a/modul10/index.html
+++ b/modul10/index.html
@@ -135,7 +135,7 @@
                <li class="team-icons__list">
                 <a href="#" class="team-icons__link">
                   <svg class="team-icons__internet facebook">
-                  <use href="img/svg/sprite2.svg#icon-facebook-icon">
+                  <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
                   </use>
                   </svg>
                 </a>
@@ -151,7 +151,7 @@
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
                 <svg class="team-icons__internet pinterest">
-                 <use href="img/svg/sprite2.svg#icon-pinterest-icon" >
+                 <use href="img/svg/sprite2-icon.svg#icon-pinterest-icon" >
                  </use>
                 </svg>
                 </a>
@@ -159,7 +159,7 @@
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
                 <svg class="team-icons__internet instagram">
-                <use href="img/svg/sprite2.svg#icon-instagram-icon" >
+                <use href="img/svg/sprite2-icon.svg#icon-instagram-icon" >
                 </use>
                 </svg>
                </a>
@@ -176,7 +176,7 @@
             <li class="team-icons__list">
               <a href="#" class="team-icons__link">
                <svg class="team-icons__internet facebook">
-                <use href="img/svg/sprite2.svg#icon-facebook-icon">
+                <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
                 </use>
                </svg>
               </a>
@@ -184,7 +184,7 @@
             <li class="team-icons__list">
               <a href="#" class="team-icons__link">
               <svg class="team-icons__internet twitter">
-                <use href="img/svg/sprite2.svg#icon-twitter-icon" >
+                <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
                 </use>
               </svg>
              </a>
@@ -192,7 +192,7 @@
             <li class="team-icons__list">
              <a href="#" class="team-icons__link">
               <svg class="team-icons__internet pinterest">
-              <use href="img/svg/sprite2.svg#icon-pinterest-icon" >
+              <use href="img/svg/sprite2-icon.svg#icon-pinterest-icon" >
               </use>
               </svg>
              </a>
@@ -200,7 +200,7 @@
             <li class="team-icons__list">
              <a href="#" class="team-icons__link">
               <svg class="team-icons__internet instagram">
-                <use href="img/svg/sprite2.svg#icon-instagram-icon" >
+                <use href="img/svg/sprite2-icon.svg#icon-instagram-icon" >
                 </use>
               </svg>
              </a>
@@ -218,7 +218,7 @@
                   <li class="team-icons__list">
                    <a href="#" class="team-icons__link">
                     <svg class="team-icons__internet facebook">
-                     <use href="img/svg/sprite2.svg#icon-facebook-icon">
+                     <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
                     </use>
                     </svg>
                     </a>
@@ -226,7 +226,7 @@
                   <li class="team-icons__list">
                     <a href="#" class="team-icons__link">
                      <svg class="team-icons__internet twitter">
-                      <use href="img/svg/sprite2.svg#icon-twitter-icon" >
+                      <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
                       </use>
                      </svg>
                     </a>
@@ -234,7 +234,7 @@
                   <li class="team-icons__list">
                     <a href="#" class="team-icons__link">
                       <svg class="team-icons__internet pinterest">
-                        <use href="img/svg/sprite2.svg#icon-pinterest-icon" >
+                        <use href="img/svg/sprite2-icon.svg#icon-pinterest-icon" >
                         </use>
                       </svg>
                      </a>
@@ -242,7 +242,7 @@
                     <li class="team-icons__list">
                      <a href="#" class="team-icons__link">
                       <svg class="team-icons__internet instagram">
-                        <use href="img/svg/sprite2.svg#icon-instagram-icon" >
+                        <use href="img/svg/sprite2-icon.svg#icon-instagram-icon" >
                         </use>
                       </svg>
                       </a>
