--- a/modul10/index.html
+++ b/modul10/index.html
@@ -143,7 +143,7 @@
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
                 <svg class="team-icons__internet twitter">
-                 <use href="img/svg/sprite2.svg#icon-twitter-icon" >
+                 <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
                  </use>
                 </svg>
                 </a>
