--- a/modul10/index.html
+++ b/modul10/index.html
@@ -134,7 +134,7 @@
              <ul class="team-icons">
                <li class="team-icons__list">
                 <a href="#" class="team-icons__link">
-                  <svg class="team-icons__internet facebook">
+                  <svg class="team-icons__internet facebook" width="26px" height="26px">
                   <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
                   </use>
                   </svg>
@@ -142,7 +142,7 @@
               </li>
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
-                <svg class="team-icons__internet twitter">
+                <svg class="team-icons__internet twitter"  width="26px" height="26px">
                  <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
                  </use>
                 </svg>
