--- a/modul10/index.html
+++ b/modul10/index.html
@@ -85,7 +85,7 @@
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
             <svg class="services-icon" width="32px" height="32px">
-                  <use href="img/svg/sprite1-icon.svg#icon-computer"></use>
+                  <use href="img/svg/sprite1-icon.svg#icon-komputer"></use>
             </svg>
          </li>
          <li class="service-list-item">
