--- a/modul10/index.html
+++ b/modul10/index.html
@@ -80,7 +80,7 @@
                     <use href="img/svg/sprite1-icon.svg#icon-line-graph"></use>
             </svg>
          </li>
-         <li class="service-list_-item">
+         <li class="service-list-item">
             <h3 class="service-list__list-title">creativity</h3>
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
