--- a/modul10/index.html
+++ b/modul10/index.html
@@ -21,31 +21,31 @@
       </a>
       <!--navigation-->
       <ul class="site-navigation">
-        <li class="site-navigation-item">
+        <li class="site-navigation__item">
           <a class="site-navigation__link site-navigation__link--hover" href="#">home</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="site-navigation__item">
           <a class="site-navigation__link site-navigation__link--hover" href="#">about us</a>
         </li>
         <li class="site-navigation-item">
           <a class="site-navigation__link site-navigation__link--hover" href="#">page</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="site-navigation__item">
           <a class="site-navigation__link site-navigation__link--hover" href="#">shop</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="site-navigation__item">
           <a class="site-navigation__link site-navigation__link--hover" href="#">blog</a>
         </li>
-        <li class="site-navigation-item">
+        <li class="site-navigation__item">
           <a class="site-navigation__link site-navigation__link--hover" href="#">contact us</a>
         </li>
-        <li> <a class="site-navigation-item" href="">
+        <li> <a class="site-navigation__item" href="">
             <svg class="site-navigation__list-icon" width="22px" height="16px">
                 <use href="img/svg/sprite2-icon.svg#icon-shopping-icon"></use>
             </svg>
         </a>
       </li> 
-      <li> <a class="site-navigation-item" href="">
+      <li> <a class="site-navigation__item" href="">
           <svg class="site-navigation__list-icon" width="22px" height="16px">
               <use href="img/svg/sprite2-icon.svg#icon-search-icon"></use>
           </svg>
@@ -64,7 +64,7 @@
       <p class="service__title1">We work with</p>
       <h2 class="service__title2">amazing services</h2>
       <ul class="service-list">
-         <li class="service-list-item">
+         <li class="service-list__item">
             <h3 class="service-list__list-title">photography</h3>
             <p class="service-list__list-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor.</p>
@@ -72,7 +72,7 @@
                 <use href="img/svg/sprite1-icon.svg#icon-alarm"></use>
             </svg>
          </li>
-         <li class="service-list-item">
+         <li class="service-list__item">
             <h3 class="service-list__list-title">web design</h3>
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -80,7 +80,7 @@
                     <use href="img/svg/sprite1-icon.svg#icon-line-graph"></use>
             </svg>
          </li>
-         <li class="service-list-item">
+         <li class="service-list__item">
             <h3 class="service-list__list-title">creativity</h3>
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -88,7 +88,7 @@
                   <use href="img/svg/sprite1-icon.svg#icon-komputer"></use>
             </svg>
          </li>
-         <li class="service-list-item">
+         <li class="service-list__item">
             <h3 class="service-list__list-title">seo</h3>
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -96,7 +96,7 @@
                     <use href="img/svg/sprite1-icon.svg#icon-book"></use>
               </svg>
          </li>
-         <li class="service-list-item">
+         <li class="service-list__item">
             <h3 class="service-list__list-title">css/html</h3>
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -104,7 +104,7 @@
                     <use href="img/svg/sprite1-icon.svg#icon-home"></use>
               </svg>
          </li>
-         <li class="service-list-item">
+         <li class="service-list__item">
             <h3 class="service-list__list-title">digital</h3>
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
