--- a/modul11/src/html/header.html
+++ b/modul11/src/html/header.html
@@ -25,13 +25,13 @@
         </li>
         <li> <a class="site-navigation__item" href="">
             <svg class="site-navigation__list-icon" width="22px" height="16px">
-                <use href="img/svg/sprite2-icon.svg#icon-shopping-icon"></use>
+                <use href="images/svg/sprite2-icon.svg#icon-shopping-icon"></use>
             </svg>
         </a>
       </li> 
       <li> <a class="site-navigation__item" href="">
           <svg class="site-navigation__list-icon" width="22px" height="16px">
-              <use href="img/svg/sprite2-icon.svg#icon-search-icon"></use>
+              <use href="images/svg/sprite2-icon.svg#icon-search-icon"></use>
           </svg>
       </a>
     </li>
