--- a/modul11/src/html/section.html
+++ b/modul11/src/html/section.html
@@ -10,15 +10,15 @@
       <ul class="team__list">
         <li class="team__list-member">
          <div class="member-img">
-            <img src="img/team/team-1.jpg"
-              srcset="img/team/team-1.jpg 380w,
-              img/team/team-1@2x.jpg 760w"
+            <img src="images/team-1.jpg"
+              srcset="images/team-1.jpg 380w,
+              images/team-1@2x.jpg 760w"
               sizes="380px" alt="team1"/>
              <ul class="team-icons">
                <li class="team-icons__list">
                 <a href="#" class="team-icons__link">
                   <svg class="team-icons__internet facebook" width="26px" height="26px">
-                  <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
+                  <use href="images/svg/sprite2-icon.svg#icon-facebook-icon">
                   </use>
                   </svg>
                 </a>
@@ -26,7 +26,7 @@
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
                 <svg class="team-icons__internet twitter"  width="26px" height="26px">
-                 <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
+                 <use href="images/svg/sprite2-icon.svg#icon-twitter-icon" >
                  </use>
                 </svg>
                 </a>
@@ -34,7 +34,7 @@
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
                 <svg class="team-icons__internet pinterest">
-                 <use href="img/svg/sprite2-icon.svg#icon-pinterest-icon" >
+                 <use href="images/svg/sprite2-icon.svg#icon-pinterest-icon" >
                  </use>
                 </svg>
                 </a>
@@ -42,7 +42,7 @@
               <li class="team-icons__list">
                <a href="#" class="team-icons__link">
                 <svg class="team-icons__internet instagram">
-                <use href="img/svg/sprite2-icon.svg#icon-instagram-icon" >
+                <use href="images/svg/sprite2-icon.svg#icon-instagram-icon" >
                 </use>
                 </svg>
                </a>
@@ -53,13 +53,13 @@
             <p class="team-list__prof">Graphic Design</p>
              <li class="team__list-member">
               <div class="member-img">
-                <img src="img/team/team-3.jpg" srcset="img/team/team-3.jpg 380w,
-                 img/team/team-3@2x.jpg 760w" sizes="380px" alt="team2"/>
+                <img src="images/team-3.jpg" srcset="images/team-3.jpg 380w,
+                 images/team-3@2x.jpg 760w" sizes="380px" alt="team2"/>
            <ul class="team-icons">
             <li class="team-icons__list">
               <a href="#" class="team-icons__link">
                <svg class="team-icons__internet facebook">
-                <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
+                <use href="images/svg/sprite2-icon.svg#icon-facebook-icon">
                 </use>
                </svg>
               </a>
@@ -67,7 +67,7 @@
             <li class="team-icons__list">
               <a href="#" class="team-icons__link">
               <svg class="team-icons__internet twitter">
-                <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
+                <use href="images/svg/sprite2-icon.svg#icon-twitter-icon" >
                 </use>
               </svg>
              </a>
@@ -75,7 +75,7 @@
             <li class="team-icons__list">
              <a href="#" class="team-icons__link">
               <svg class="team-icons__internet pinterest">
-              <use href="img/svg/sprite2-icon.svg#icon-pinterest-icon" >
+              <use href="images/svg/sprite2-icon.svg#icon-pinterest-icon" >
               </use>
               </svg>
              </a>
@@ -83,7 +83,7 @@
             <li class="team-icons__list">
              <a href="#" class="team-icons__link">
               <svg class="team-icons__internet instagram">
-                <use href="img/svg/sprite2-icon.svg#icon-instagram-icon" >
+                <use href="images/svg/sprite2-icon.svg#icon-instagram-icon" >
                 </use>
               </svg>
              </a>
@@ -95,13 +95,13 @@
           </li>
           <li class="team__list-member">
           <div class="member-img">
-            <img src="img/team/team-2.jpg" srcset="img/team/team-2.jpg 380w,
-              img/team/team-2@2x.jpg 760w" sizes="380px" alt="team3"/>
+            <img src="images/team-2.jpg" srcset="images/team-2.jpg 380w,
+              images/team-2@2x.jpg 760w" sizes="380px" alt="team3"/>
                 <ul class="team-icons">
                   <li class="team-icons__list">
                    <a href="#" class="team-icons__link">
                     <svg class="team-icons__internet facebook">
-                     <use href="img/svg/sprite2-icon.svg#icon-facebook-icon">
+                     <use href="images/svg/sprite2-icon.svg#icon-facebook-icon">
                     </use>
                     </svg>
                     </a>
@@ -109,7 +109,7 @@
                   <li class="team-icons__list">
                     <a href="#" class="team-icons__link">
                      <svg class="team-icons__internet twitter">
-                      <use href="img/svg/sprite2-icon.svg#icon-twitter-icon" >
+                      <use href="images/svg/sprite2-icon.svg#icon-twitter-icon" >
                       </use>
                      </svg>
                     </a>
@@ -117,7 +117,7 @@
                   <li class="team-icons__list">
                     <a href="#" class="team-icons__link">
                       <svg class="team-icons__internet pinterest">
-                        <use href="img/svg/sprite2-icon.svg#icon-pinterest-icon" >
+                        <use href="images/svg/sprite2-icon.svg#icon-pinterest-icon" >
                         </use>
                       </svg>
                      </a>
@@ -125,7 +125,7 @@
                     <li class="team-icons__list">
                      <a href="#" class="team-icons__link">
                       <svg class="team-icons__internet instagram">
-                        <use href="img/svg/sprite2-icon.svg#icon-instagram-icon" >
+                        <use href="images/svg/sprite2-icon.svg#icon-instagram-icon" >
                         </use>
                       </svg>
                       </a>
