--- a/modul11/src/html/service.html
+++ b/modul11/src/html/service.html
@@ -7,7 +7,7 @@
             <p class="service-list__list-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor.</p>
             <svg class="services-icon" width="32px" height="32px">
-                <use href="img/svg/sprite1-icon.svg#icon-alarm"></use>
+                <use href="images/svg/sprite1-icon.svg#icon-alarm"></use>
             </svg>
          </li>
          <li class="service-list__item">
@@ -15,7 +15,7 @@
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
             <svg class="services-icon" width="32px" height="32px">
-                    <use href="img/svg/sprite1-icon.svg#icon-line-graph"></use>
+                    <use href="images/svg/sprite1-icon.svg#icon-line-graph"></use>
             </svg>
          </li>
          <li class="service-list__item">
@@ -23,7 +23,7 @@
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
             <svg class="services-icon" width="32px" height="32px">
-                  <use href="img/svg/sprite1-icon.svg#icon-komputer"></use>
+                  <use href="images/svg/sprite1-icon.svg#icon-komputer"></use>
             </svg>
          </li>
          <li class="service-list__item">
@@ -31,7 +31,7 @@
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 <svg class="services-icon" width="32px" height="32px">
-                    <use href="img/svg/sprite1-icon.svg#icon-book"></use>
+                    <use href="images/svg/sprite1-icon.svg#icon-book"></use>
               </svg>
          </li>
          <li class="service-list__item">
@@ -39,7 +39,7 @@
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 <svg class="services-icon" width="32px" height="32px">
-                    <use href="img/svg/sprite1-icon.svg#icon-home"></use>
+                    <use href="images/svg/sprite1-icon.svg#icon-home"></use>
               </svg>
          </li>
          <li class="service-list__item">
@@ -47,7 +47,7 @@
             <p class="service-list__list-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 <svg class="services-icon" width="32px" height="32px">
-                    <use href="img/svg/sprite1-icon.svg#icon-digital"></use>
+                    <use href="images/svg/sprite1-icon.svg#icon-digital"></use>
               </svg>
          </li>
       </ul>
