--- a/modul11/src/html/footer.html
+++ b/modul11/src/html/footer.html
@@ -1,7 +1,7 @@
  <footer class="container">
      <div class="footer-container">
        <p class="footer__info">  © 2016 MoGo free PSD template by <a href="#">Laaqiq</a> </p>
-       <div class="input__forma">
+       <div class="input">
            <input class="input__area" type="text" placeholder="Your Email..." />
            <input class="input__button" type="button" value="SUBSCRIBE" />
         </div>
